--- a/SEA_Application/Views/Inventory/PurchaseOrdersList.cshtml
+++ b/SEA_Application/Views/Inventory/PurchaseOrdersList.cshtml
@@ -97,13 +97,13 @@ else
                     }
                 },
 
-                //{
-                //    text: '<span class="datatableButtonsEdit"> <img src="/Content/assets/assets/icons/Icon-edit.png" alt=""> Return Order</span>',
-                //    action: function (e, dt, button, config) {
+                {
+                    text: '<span class="datatableButtonsEdit"> <img src="/Content/assets/assets/icons/Icon-edit.png" alt=""> Return Order</span>',
+                    action: function (e, dt, button, config) {
 
-                //        window.location.href = "/Inventory/ReturnPurchasedOrder";
-                //    }
-                //},
+                        window.location.href = "/Inventory/ReturnPurchasedOrder";
+                    }
+                },
 
 
                 {
