--- a/SEA_Application/Views/Sales/ReturnSaleOrder.cshtml
+++ b/SEA_Application/Views/Sales/ReturnSaleOrder.cshtml
@@ -44,6 +44,19 @@
                 </div>
                 <br />
 
+                <div class="form-group">
+                    <div class="col-md-12">
+
+                        <label class="control-label">Sale Type</label>
+                        @*<textarea class="form-control" name="Description" id="Description" rows="5"></textarea>*@
+                        <br />
+
+                        <select tabindex="1" style="width:350px;" class="form-control drop SaleTypeDropDown" id="SaleType" name="SaleType" required></select>
+
+
+                    </div>
+                </div>
+
             </div><!--end of column 6-->
 
 
@@ -109,7 +122,18 @@
 
                             <tr id="GrandTotalRow">
 
-                                <td style="width:20%"></td>
+                                <td style="width:15%">
+                                    <div class="form-group">
+                                        <div class="">
+
+                                            <label class="control-label">Cashier</label>
+                                            <input type="text" id="Cashier" name="Cashier" value="@ViewBag.UserName" class="form-control" required readonly />
+
+
+
+                                        </div>
+                                    </div>
+                                </td>
                                 <td style="width:15%"></td>
                                 <td style="width:15%"></td>
                                 <td style="width:15%"></td>
@@ -134,7 +158,7 @@
             </div><!--col 12-->
 
 
-
+            <br />  
             <div class="col-md-8">
 
 
@@ -238,6 +262,41 @@
                             .attr("value", sch[i].Id).text(sch[i].Name));
 
                         ExternalAndProductionList = ExternalAndProductionList + "<option value=" + sch[i].Id + ">" + sch[i].Name + "</option>";
+
+                    }
+                }
+                else {
+                    $el.append($("<option></option>")
+                        .attr("value", '').text('Select'));
+                }
+            }
+        });//end of ajax
+
+
+        $.ajax({
+            type: "POST",
+            cache: false,
+            url: "/Sales/GetSaleTypeList",
+            processData: false,
+            contentType: false,
+            success: function (data) {
+                var sch = JSON.parse(data);
+                console.log(sch);
+                var $el = $("#SaleType");
+                $el.empty();
+                if (sch.length > 0) {
+                    $el.append($("<option></option>")
+                        .attr("value", "").text('Select Sale Type'));
+                    debugger
+
+
+                    for (i = 0; i < sch.length; i++) {
+
+
+                        $el.append($("<option></option>")
+                            .attr("value", sch[i].Id).text(sch[i].Name));
+
+
 
                     }
                 }
@@ -427,13 +486,14 @@
                 // var StudentId = $("#StudentID").val();
                 // var CustomerName = $("#CustomerName").val();
                 var GrandTotal = $("#GrandTotal").val();
-
+                var SaleTypeId = $("#SaleType").val();
+                var Cashier = $("#Cashier").val();
 
 
                 $.ajax({
                     type: "post",
                     url: "/Sales/SaveReturnSaleOrder",
-                    data: { 'Date': Date, 'GrandTotal': GrandTotal, 'SaleOrdersList': SalesList },
+                    data: { 'Date': Date, 'GrandTotal': GrandTotal, 'SaleTypeId': SaleTypeId, "Cashier": Cashier,'SaleOrdersList': SalesList },
                     datatype: "json",
                     cache: false,
                     success: function (data) {
