--- a/SEA_Application/Views/Sales/Create.cshtml
+++ b/SEA_Application/Views/Sales/Create.cshtml
@@ -51,7 +51,7 @@
 
                             <label class="control-label">Date</label>
 
-                            <input type="date" id="Date" name="Date" class="form-control" required />
+                            <input  type="date" id="Date" name="Date" class="form-control" required readonly />
 
                         </div>
 
